--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
 	"name": "Facebook Untracker",
-	"version": "1.2",
+	"version": "1.3",
 	"description": "Disables Facebook's outbound link tracking.",
+	"update_url": "http://tobias104.github.com/fb-untracker/updates.xml",
 	"icons": {
 		"16": "icon_16.webp",
 		"48": "icon_48.webp",
