--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "Facebook Untracker",
 	"version": "1.3",
 	"description": "Disables Facebook's outbound link tracking.",
-	"update_url": "http://tobias104.github.com/fb-untracker/updates.xml",
+	"update_url": "https://github.com/tobias104/fb-untracker/raw/master/updates.xml",
 	"icons": {
 		"16": "icon_16.webp",
 		"48": "icon_48.webp",
