--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Facebook Untracker",
-	"version": "1.3",
+	"version": "1.4",
 	"description": "Disables Facebook's outbound link tracking.",
 	"update_url": "https://github.com/tobias104/fb-untracker/raw/master/updates.xml",
 	"icons": {
@@ -10,7 +10,7 @@
 	},
 	"content_scripts": [
 		{
-			"matches": ["http://www.facebook.com/*"],
+			"matches": ["*://*.facebook.com/*"],
 			"run_at": "document_end",
 			"js": ["untrack.js"]
 		}
