--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Facebook Untracker",
-	"version": "2.3",
+	"version": "2.4",
 	"description": "Disables Facebook's outbound link tracking.",
 	"update_url": "https://github.com/tobias104/fb-untracker/raw/master/updates.xml",
 	"icons": {
@@ -14,5 +14,6 @@
 			"run_at": "document_end",
 			"js": ["untrack.js"]
 		}
-	]
+	],
+	"manifest_version": 2
 }
